--- a/reactportfolio1/src/App.css
+++ b/reactportfolio1/src/App.css
@@ -5,3 +5,13 @@
   text-decoration: none;
   color: black;
 }
+
+.page-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.content-wrap{
+  flex:1;
+}
