--- a/reactportfolio1/src/App.css
+++ b/reactportfolio1/src/App.css
@@ -1,9 +1,9 @@
 .link {
-  color: black;
+  color: white;
 }
 .link:hover {
-  text-decoration: none;
-  color: black;
+  text-decoration: none ;
+  color:white;
 }
 
 .page-container {
@@ -14,4 +14,8 @@
 
 .content-wrap{
   flex:1;
+}
+
+.Navbar {
+color:#dc3535
 }
