--- a/reactportfolio1/src/components/Footer.css
+++ b/reactportfolio1/src/components/Footer.css
@@ -1,8 +1,12 @@
 .main-footer {
   color: white;
   background-color: #dc3535;
-  padding-top: 3em;
+  padding-top: 1em;
   position: relative;
   bottom:0;
   width:100%;
+}
+
+.center{
+  text-align: center;
 }
