name,email,about links on about page

--- a/reactportfolio1/src/pages/About/About.css
+++ b/reactportfolio1/src/pages/About/About.css
@@ -9,3 +9,13 @@ width: 700px;
     margin-top: 15mm;
     width: 40%;;
 }
+
+.name {
+  text-align: center;
+  align-items: center;
+  
+}
+
+.bottom {
+  margin-bottom: 4mm;
+}
