footer, new resume

--- a/reactportfolio1/src/components/Footer.css
+++ b/reactportfolio1/src/components/Footer.css
@@ -1,6 +1,6 @@
 .main-footer {
   color: white;
-  background-color: #dc3535;
+  background-color: #8f3333;
   padding-top: 1em;
   position: relative;
   bottom:0;
